--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -9,6 +9,7 @@
       .timeline
         h2.title Tweets
         = render 'shared/feed'
+		= @user.picture
 
   - else
     - provide(:title, 'Welcome')
