--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -11,6 +11,10 @@
         = f.text_field :name, class: 'form-control'
 
       .form-group
+        = f.label :picture, class: 'control-label'
+        = f.file_field :picture, class: 'form-control'
+		
+      .form-group
         = f.label :email, class: 'control-label'
         = f.text_field :email, class: 'form-control'
 
@@ -24,9 +28,10 @@
 
       .actions
         = f.submit "Save changes", class: "btn btn-large btn-primary"
-
+	  br
+	  
       div
         = gravatar_for @user
         <a href="http://gravatar.com/emails">change</a>
 
-    = link_to 'Delete my account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger"
+    = link_to 'Delete my account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "float:right;"
